--- a/src/_includes/snippets/navbar.njk
+++ b/src/_includes/snippets/navbar.njk
@@ -2,13 +2,13 @@
   <ul>
     {% for entry in collections.all | eleventyNavigation %}
       <li class="{% if entry.url == page.url %}active{% endif %}">
-        <a href="{{ entry.url }}">{{ entry.title }}</a>
+        <a href="{{ metadata.sitePostfixURL }}{{ entry.url }}">{{ entry.title }}</a>
         
         {% if entry.children.length %}
           <ul>
             {% for child in entry.children %}
               <li>
-                <a href="{{ child.url }}">{{ child.title }}</a>
+                <a href="{{ metadata.sitePostfixURL }}{{ child.url }}">{{ child.title }}</a>
               </li>
             {% endfor %}
           </ul>
