Добавление наброска слайдера на главной странице и предпологаймой структуры проекта

--- a/src/_includes/layouts/index.njk
+++ b/src/_includes/layouts/index.njk
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="{{ metadata.language }}">
-
-  <head>
-    {% include 'snippets/head.njk' %}
-  </head>
-
+{% include 'snippets/head.njk' %}
+<body>
 {% include 'snippets/header.njk' %}
-    <main>
+{% include 'snippets/portfolio-slider.njk' %}
+    <div class="container">
       <div class="row d-flex justify-content-center">
         <div>
           <h1>{{ title }}</h1>
@@ -18,9 +16,10 @@
         </div>
       </div>
     </div>
-  </main>
+  </div>
 
 {% include 'snippets/footer.njk' %}
+</body>
 
 
 </html>
