--- a/src/_includes/snippets/footer.njk
+++ b/src/_includes/snippets/footer.njk
@@ -1,3 +1,3 @@
-<footer>
-</footer>
-<script src="{{ metadata.sitePostfixURL }}/js/scripts.js"></script>
+<div class="footer container-fluid">
+</div>
+<script src="{{ metadata.siteURLPostfix }}/js/scripts.js"></script>
