--- a/src/_includes/snippets/head.njk
+++ b/src/_includes/snippets/head.njk
@@ -1,2 +1,2 @@
 <meta charset="UTF-8">
-<link type="stylesheet" src="{{ metadata.sitePostfixURL }}/styles/styles.css">
+<link type="stylesheet" src="{{ metadata.siteURLPostfix }}/styles/styles.css">
