--- a/src/_includes/snippets/header.njk
+++ b/src/_includes/snippets/header.njk
@@ -1,3 +1,4 @@
-<header>
+<div class="header container-fluid">
+<a href="{{ metadata.siteURLPostfix }}" class="logotype header_logotype">Фотография дяди Васи</a>
 {% include 'snippets/navbar.njk' %}
-</header>
+</div>
