--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,6 @@ layout: layouts/index.njk
 title: "Тест портфолио"
 subtitle: "Успешная основа сборки портфолио на eleventy"
 eleventyNavigation:
-  key: "Главная"
+  key: "Портфолио"
   order: 100
 ---
